# OpenOCR

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  QUICKSTART.md  README.md  README_ch.md  __init__.py  build_package.py  demo_gradio.py  demo_opendoc.py  demo_rec.py  demo_unirec.py  infer_doc_onnx.py  openocr.py  pyproject.toml  requirements.txt  setup.py  test_openocr.py
configs/dataset/rec/: cocotextv2.yaml  ctw1500.yaml  cute.yaml  evaluation.yaml  funsd.yaml  icdar13.yaml  icdar15.yaml  iiit.yaml  ltb.yaml  mjsynth.yaml  naf.yaml  openvino.yaml  ost.yaml  sroie19.yaml  svt.yaml  svtp.yaml  synthtext.yaml  test.yaml  textocr.yaml  textocr_horizontal.yaml  totaltext.yaml  union14m_b.yaml  union14m_l_filtered.yaml  union14ml.yaml  wildreceipt.yaml
configs/dataset/rec_splits/: test.yaml  train.yaml  val.yaml
configs/det/dbnet/: repvit_db.yml
configs/rec/: svtr_base_cppd.yml  svtrnet_base_ctc.yml  svtrnet_ctc.yml
configs/rec/abinet/: resnet45_abinet_lang.yml  resnet45_abinet_wo_lang.yml  resnet45_base_abinet.yml  resnet45_base_abinet_wo_lang.yml  resnet45_trans_abinet_lang.yml  resnet45_trans_abinet_wo_lang.yml  svtr_tiny_abinet.yml  svtrv2_abinet_lang.yml  svtrv2_abinet_wo_lang.yml
configs/rec/aster/: aster_96words_tps_on.yml  aster_tps_on.yml  resent31_lstm_aster_tps_on.yml  resent_aster_tps_on.yml  resnet31_lstm_aster_tps_on.yml  svtrv2_aster.yml  svtrv2_aster_tps_on.yml  svtrv2_base_ds_aster_u14m.yml  svtrv2_lnconv_aster_96words.yml
configs/rec/autostr/: autostr_lstm_aster_tps_on.yml
configs/rec/busnet/: svtrv2_busnet.yml  svtrv2_busnet_pretraining.yml  vit_busnet.yml  vit_busnet_pretraining.yml
configs/rec/cam/: convnext_cam_tps_on.yml  convnextv2_cam_tps_on.yml  convnextv2_tiny_cam_tps_on.yml  svtrv2_cam_tps_on.yml
configs/rec/cdistnet/: resnet45_base_cdistnet.yml  resnet45_trans_cdistnet.yml  svtr_base_cdistnet.yml  svtrv2_base_ds_cdistnet_u14m.yml  svtrv2_base_ln_conv_cdistnet.yml  svtrv2_cdistnet.yml
docs/: SKILL.md  cmer.md  finetune_det.md  finetune_rec.md  opendoc.md  openocr.md  svtrv2.md  unirec.md
opendet/losses/: __init__.py  db_loss.py  det_basic_loss.py
opendet/metrics/: __init__.py  det_metric.py  eval_det_iou.py
opendet/modeling/: __init__.py  base_detector.py
opendet/postprocess/: __init__.py  db_postprocess.py
opendet/preprocess/: __init__.py  crop_paste.py  crop_resize.py  db_label_encode.py  db_resize_for_test.py  iaa_augment.py
openrec/losses/: __init__.py  abinet_loss.py  ar_loss.py  cam_loss.py  cdistnet_loss.py  ce_loss.py  cmer_loss.py  cppd_loss.py  ctc_loss.py  igtr_loss.py  lister_loss.py  lpv_loss.py  mdiff_loss.py  mgp_loss.py  nrtr_loss.py  parseq_loss.py  robustscanner_loss.py  seed_loss.py  smtr_loss.py  srn_loss.py  unirec_loss.py  visionlan_loss.py
openrec/metrics/: __init__.py  rec_metric.py  rec_metric_cmer.py  rec_metric_gtc.py  rec_metric_long.py  rec_metric_mgp.py
openrec/modeling/: __init__.py  base_recognizer.py  common.py
openrec/optimizer/: __init__.py  learning_rate.py  lr.py  lr_scheduler.py  optimizer.py  regularizer.py
openrec/postprocess/: __init__.py  abinet_postprocess.py  ar_postprocess.py  ce_postprocess.py  char_postprocess.py  cmer_postprocess.py  cppd_postprocess.py  ctc_postprocess.py  igtr_postprocess.py  lister_postprocess.py  mgp_postprocess.py  nrtr_postprocess.py  robustscanner_postprocess.py  smtr_postprocess.py  srn_postprocess.py  unirec_postprocess.py  visionlan_postprocess.py
openrec/preprocess/: __init__.py  abinet_aug.py  abinet_label_encode.py  ar_label_encode.py  auto_augment.py  cam_label_encode.py  ce_label_encode.py  char_label_encode.py  cmer_label_encode.py  cppd_label_encode.py  ctc_label_encode.py  dptr_label_encode.py  ep_label_encode.py  igtr_label_encode.py  mdiff_label_encode.py  mgp_label_encode.py  parseq_aug.py  rec_aug.py  resize.py  robustscanner_label_encode.py  smtr_label_encode.py  srn_label_encode.py  unirec_label_encode.py  visionlan_label_encode.py
tools/: create_lmdb_dataset.py  download_example_images.py  eval_det.py  eval_rec.py  eval_rec_all.py  eval_rec_all_ch.py  eval_rec_all_en.py  eval_rec_all_long.py  eval_rec_all_long_final.py  eval_rec_all_long_simple.py  eval_rec_all_ratio.py  export_rec.py  infer_cmer.py  infer_det.py  infer_doc.py  infer_doc_onnx.py  infer_e2e.py  infer_e2e_parallel.py  infer_rec.py  infer_unirec_onnx.py  to_markdown.py  toonnx.py  train_det.py  train_rec.py  utility.py
tools/data/: __init__.py  cmer_dataset.py  cmer_web_dataset.py  collate_fn.py  lmdb_dataset.py  lmdb_dataset_test.py  multi_scale_sampler.py  native_size_dataset.py  native_size_sampler.py  ratio_dataset.py  ratio_dataset_test.py  ratio_dataset_test_tvresize.py  ratio_dataset_tvresize.py  ratio_dataset_tvresize_test.py  ratio_sampler.py  raw_image_dataset.py  simple_dataset.py  strlmdb_dataset.py  text_lmdb_dataset.py
tools/download/: download_dataset.py  utils.py
tools/engine/: __init__.py  config.py  trainer.py
tools/infer/: onnx_engine.py  predict_rec.py  utility.py
tools/utils/: ckpt.py  gen_label.py  logging.py  network.py  poly_nms.py  profiler.py  save_load.py  stats.py  utility.py  visual.py
(+232 files in other folders)
