[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "openocr-python"
version = "0.1.0.dev"
description = "Accurate and Efficient General OCR System"
readme = "QUICKSTART.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    {name = "OCR Team, FVL Lab", email = "784990967@qq.com"}
]
maintainers = [
    {name = "OCR Team, FVL Lab", email = "784990967@qq.com"}
]
keywords = [
    "ocr",
    "optical character recognition",
    "text detection",
    "text recognition",
    "document parsing",
    "deep learning",
    "computer vision"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "pyyaml",
    "tqdm",
    "rapidfuzz",
    "pyclipper",
    "pydantic",
    "shapely",
    "huggingface-hub",
    "modelscope",
    "onnxruntime",
]

[project.optional-dependencies]
onnx-gpu = [
    "onnxruntime-gpu",
]
pytorch = [
    "torch",
    "torchvision",
]
gradio = [
    "gradio",
]
all = [
    "torch",
    "torchvision",
    "gradio",
]

[project.urls]
Homepage = "https://github.com/Topdu/OpenOCR"
Documentation = "https://github.com/Topdu/OpenOCR/tree/main/docs"
Repository = "https://github.com/Topdu/OpenOCR"
"Bug Reports" = "https://github.com/Topdu/OpenOCR/issues"

[project.scripts]
openocr = "openocr.openocr:main"

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["configs/**/*.yml", "configs/**/*.yaml", "*.ttf"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
